src/ui/radarr_ui/snapshots/managarr__ui__radarr_ui__radarr_ui_tests__tests__snapshot_tests__System.snap
---
source: src/ui/radarr_ui/radarr_ui_tests.rs
expression: output
---
╭  Movies  ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ Library │ Collections │ Downloads │ Blocklist │ Root Folders │ Indexers │ System                                                                                  │
│╭  Tasks  ───────────────────────────────────────────────────────────────────────╮╭  Queued Events  ──────────────────────────────────────────────────────────────╮│
││Name                 Interval   Last Execution Last Duration  Next Execution    ││Trigger    Status      Name               Queued        Started     Duration   ││
││Backup               1 hour     now            00:00:17       59 minutes        ││manual     completed   Refresh Monitored  4 minutes ago 4 minutes a 00:03:03   ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
│╰────────────────────────────────────────────────────────────────────────────────╯╰───────────────────────────────────────────────────────────────────────────────╯│
│╭  Logs  ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮│
││2025-12-15 16:14:45 UTC|INFO|DownloadDecisionMaker|Processing 545 releases                                                                                       ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
│╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│
╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
